# nexara-100m-chat

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: nexara_tiny_100m.toml  nexara_tiny_100m_sft.toml  nexara_tiny_100m_stage_b_resume.toml  nexara_tiny_100m_stage_c.toml  stage1_tinystories.toml  stage2_sft.toml
datasets/: __init__.py  statistics.py  text.py  tinystories.py  token_cache.py
docs/: EXPERIMENT_SUMMARY.md  RUNBOOK.md  TINYSTORIES.md  milestone_100000_report.md  milestone_10000_report.md  milestone_15000_report.md  milestone_20000_report.md  milestone_30000_report.md  milestone_40000_report.md  milestone_50000_report.md  milestone_75000_report.md  milestone_90000_report.md  nexara_0_2_chat_candidate_comparison.md  nexara_0_2_chat_export_report.md  nexara_0_2_chat_model_card.md  nexara_0_2_chat_release_checklist.md  nexara_tiny_100m_final_report.md  nexara_tiny_100m_training_plan.md  nexara_v1_master_plan.md  phase2_sft_plan.md  stage2_sft_3000_evaluation_report.md  stage2_sft_500_evaluation_report.md
evaluation/: __init__.py  evaluate.py
inference/: __init__.py  chat.py  generate.py  sampling.py
model/: __init__.py  config.py  transformer.py
scripts/: __init__.py  auto_stop_studio.py  benchmark_forward.py  benchmark_generation.py  build_nexara_identity_dataset.py  cache_tokens.py  create_release_notes.py  dataset_report.py  dataset_statistics.py  download_tinystories.py  estimate_params.py  evaluate_checkpoint.py  evaluate_sft.py  export_checkpoint.py  export_huggingface.py  finalize_training.py  live_dashboard.py  (+28 more)
(+30 files in other folders)
